<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">shipLock</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ship_no">船名船号</string>
    <string name="ship_ownner_name">船主姓名</string>
    <string name="mobile_tel_no">手机号</string>
    <string name="id_card">身份证号</string>
    <string name="fee_A">过闸费A</string>
    <string name="fee_B">过闸费B</string>
    <string name="fee_C">过闸费Ｃ</string>

</resources>